# rickcreator87-loaner-ledger

./: .markdownlint.yaml  API Usage  Advanced CLI Usage  Authority Schema  BUSINESS LOAN & STAGED FUNDING AGREEMENT  Basic Operations  Best Practices  COMPANION DOCUMENTS  Command Line Interface  Complete Identity Example  Compliance Officer  Credit Officer  Delegate Authority  Dockerfile  Exclusive Summary   GOVERNANCE + WORKFLOW MAPPING (GitDigital‑Grade)  GitDigital Finance CLI (gdf)  Governance Rule  Identity Layer  Identity Management  Identity Operations  Installation  LEDGER_ARCHITECTURE.md  Metadata Fields  POLISHED, AUDIT‑READY REWRITE  Permission Schema  Programmatic  Pull Request Process  README.md  REPO‑READY SPECIFICATION   REUSABLE TEMPLATE VERSION (For Future Loans)  Revision History  Script Integration  Supporting Configuration Files  System Administrator  Tax Calculations  Troubleshooting  Verify Identity  Webhook Events  conflict Rules   (+11 more)
Site/: Architecture.md  Index.html
docs/: overview.md  schema_reference.md  usage.md
governance/: engine.py
schemas/: authority.schema.yaml  identity.schema.yaml  tax.schema.yaml
tax/federal/: rules.py
tax/state/colorado/: rules.py
templates/: authority-example.yaml  identity-example.yaml  permission-matrix.md
tests/: test_authority.py  test_identity.py  test_tax_logic.py
validation/: validate_authority.py  validate_identity.py  validate_tax.py
